@@ -14,7 +14,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: var.test,v 1.26.8.1 2006/10/09 19:31:07 msofer Exp $
+# RCS: @(#) $Id: var.test,v 1.26.8.2 2006/10/09 22:33:53 msofer Exp $
 #
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
@@ -222,10 +222,11 @@ test var-3.4 {MakeUpvar, my var has TCL_NAMESPACE_ONLY specified} testupvar {
 	catch {unset ::test_ns_var::vv}
 	proc p {} {
 	    # create namespace var vv linked to global a
-	    testupvar 1 a {} vv namespace 
+	    testupvar 2 a {} vv namespace 
 	}
 	p
     }
+    # Modified: that should create a global var according to the docs!
     list $test_ns_var::vv [set test_ns_var::vv 123] $a
 } {456 123 123}
 test var-3.5 {MakeUpvar, no call frame so my var will be in global :: ns} {
@@ -390,7 +391,7 @@ test var-7.5 {Tcl_VariableObjCmd, value for last var is optional} {
     set six  666
     namespace eval test_ns_var {
         variable five 5 six
-        lappend a $five
+        lappend ::a $five
     }
     lappend a $test_ns_var::five \
         [set test_ns_var::six 6] [set test_ns_var::six] $six
@@ -415,9 +416,9 @@ test var-7.8 {Tcl_VariableObjCmd, if var already exists and no value is given, l
     set a ""
     namespace eval test_ns_var {
         variable eight 8
-        lappend a $eight
+        lappend ::a $eight
         variable eight
-        lappend a $eight
+        lappend ::a $eight
     }
     set a
 } {8 8}
